--- a/css/styles.css
+++ b/css/styles.css
@@ -39,11 +39,27 @@
 body {
   background: #00cdca;
 }
+.footer {
+  float: left;
+  margin-top: -40px;
+  right: auto;
+  margin-left: 32px;
+}
 
+.footer i {
+  padding: 0px 8px 0 8px;
+  font-size: 25px;
+  color: #18448c;
+}
+.header {
+  padding-top: 25px;
+  margin: auto 40px;
+}
 #container {
   width: 700px;
   margin: 0 auto;
   background: #fff;
+  box-shadow: 0px 0 24px rgba(0, 0, 0, 0.7);
 }
 
 .clear {
@@ -53,6 +69,7 @@ body {
 #container .wrapper {
   padding: 0;
   margin: 0;
+  background: url("../images/bg-divizq.png") 0 0 no-repeat;
 }
 
 .titulo {
@@ -85,10 +102,16 @@ body {
   border: none;
   font-family: "latomedium";
 }
-
+#menu-principal {
+  float: left;
+  text-align: right;
+  width: 90%;
+  margin-top: -15px;
+}
 #menu-principal ul li {
   display: inline;
   text-decoration: none;
+  padding: 0px 5px 0px 5px;
 }
 
 #menu-principal ul li a {
@@ -111,21 +134,29 @@ body {
 #logo {
   font-family: "latoheavy";
   font-size: 13pt;
+  float: left;
+}
+
+#logo strong {
+  vertical-align: middle;
 }
 
 .content-information {
   width: 300px;
   float: left;
   position: relative;
-  background: url("../images/bg-divizq.png") 0 0 no-repeat;
   display: inline-block;
-  padding: 25px 25px 20px 40px;
+  padding: 0px 25px 20px 40px;
 }
 
 .content-image {
   width: 300px;
   width: 300px;
+  right: 97px;
   float: left;
   position: relative;
   display: inline-block;
+}
+.content-image img {
+  width: auto;
 }
